修改了介绍页，增加了对黑暗模式的支持，修复了部分bug，改变了文件结构

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -1,44 +1,20 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
-<title>说明文档</title></head>
-<body bgcolor="#E6EE9C"><h1>说明文档</h1>
-<ul>
-<li>这是一篇关于这个App使用方法的说明。</li>
-<li>1.在页面中点击需要上传文件的地方，选择“截图”或类似的选项：</li>
-
-</ul>
-<p><img src="img/1.jpg" referrerpolicy="no-referrer" alt="1" align="center"></p>
-<ul>
-<li>2.再选择“截取图片”：</li>
-
-</ul>
-<p><img src="img/2.jpg" referrerpolicy="no-referrer" alt="2" align="center"></p>
-<ul>
-<li>3.在这个界面你可以拍照或选择相册里的图片，如下图：</li>
-
-</ul>
-<p><img src="img/3.jpg" referrerpolicy="no-referrer" alt="3" align="center"></p>
-<ul>
-<li>3-1.如果你要从相册选择的话，请在类似下图这种界面选择图片：</li>
-
-</ul>
-<p><img src="img/3-1.jpg" referrerpolicy="no-referrer" alt="3-1" align="center"></p>
-<ul>
-<li>4.在这里，你可以调整图片大小，如图：</li>
-
-</ul>
-<p><img src="img/4.jpg" referrerpolicy="no-referrer" alt="4" align="center"></p>
-<ul>
-<li>5.这是最终的确定页面，若无误可以点击确定：</li>
-
-</ul>
-<p><img src="img/5.jpg" referrerpolicy="no-referrer" alt="5" align="center"></p>
-<p>&nbsp;</p>
-<blockquote><p>Author:Yili</p>
-<p>Date:2020.3.21</p>
-<p>本文使用CC BY-NC-ND3.0协议进行许可 | <a href='http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh'>Creative Commons BY-NC-ND 3.0</a></p>
-</blockquote>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>html5直接调用手机相机照相/录像</title>
+</head>
+<body>
 </body>
+<div>
+    <h3>示例：拍摄照片</h3>
+    <form>
+        <input type="file" name="image" accept="image/*" capture="user">
+    </form>
+    <h3>有Bug，不要用这个功能～</h3>
+    <h3>直接点右下角结束吧～</h3>
+</div>
 </html>
